Grid layout is applied, header added, mobile device

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 <body>
     <div class="container">
         <header class="header">
+            <div class="header__logo__text">
+            <img src="../img/logo.png" class="header__logo" alt="header-logo">
+            <h1>
+                <span>Hacker</span>
+                <span>Escape</span>
+                <span>Rooms</span>
+            </h1>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#">Play Online</a></li>
@@ -22,14 +30,16 @@
                 </ul>
             </nav>
         </header>
+        <img src="../img/headerImg.png" class="header__img" alt="">
         <main class="main">
-            Main
+            <button class="on_site_button">On-site challenges</button>
+            <button class="online_button">On-site challenges</button>
         </main>
-        <aside class="left">
-            Left
+        <aside class="about">
+            About
         </aside>
-        <aside class="right">
-            Right
+        <aside class="collage">
+            Collage
         </aside>
         <footer class="footer">
             Footer
