More images added, buttons, review windows and bookings with scrolling

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container">
         <header class="header">
             <div class="header__logo__text">
-            <img src="../img/logo.png" class="header__logo" alt="header-logo">
-            <h1>
-                <span>Hacker</span>
-                <span>Escape</span>
-                <span>Rooms</span>
-            </h1>
+                <img src="../img/logo.png" class="header__logo" alt="header-logo">
+                <h1>
+                    <span>Hacker</span>
+                    <span>Escape</span>
+                    <span>Rooms</span>
+                </h1>
             </div>
             <nav>
                 <ul>
@@ -30,13 +30,58 @@
                 </ul>
             </nav>
         </header>
-        <img src="../img/headerImg.png" class="header__img" alt="">
-        <main class="main">
+        <div class="header__image">
+            <img src="../img/headerImg.png" class="header__img" alt="">
+        </div>
+        <div class="buttons__container">
             <button class="on_site_button">On-site challenges</button>
-            <button class="online_button">On-site challenges</button>
-        </main>
-        <aside class="about">
-            About
+            <button class="online_button">Online challenges</button>
+        </div>
+        <aside class="review__container">
+            <img src="../img/logo_review.png" alt="logo">
+            <span>This is a quote about how amazing this place is and how
+                much fun me and my friends had when we tried it
+            </span>
+            <p>John Doe, visited us is September 2021</p>
+        </aside>
+        <aside class="popular__container">
+            <div class="popular__container__room__one">
+                <img src="../img/headerImg.png" alt="">
+                <h1>Title of room(on-site)</h1>
+                <div class="popular__container__raiting">
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star_no.png" alt=""></span>
+                </div>
+                <div class="poplar__participants">
+                    <span>2-6 participants</span>
+                </div>
+                <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
+                    Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+                </p>
+                <button class="red__button">Book this room</button>
+            </div>
+
+            <div class="popular__container__room__one">
+                <img src="../img/headerImg.png" alt="">
+                <h1>Title of room(on-site)</h1>
+                <div class="popular__container__raiting">
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star_no.png" alt=""></span>
+                </div>
+                <div class="poplar__participants">
+                    <span>2-6 participants</span>
+                </div>
+                <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
+                    Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+                </p>
+                <button class="red__button">Book this room</button>
+            </div>
         </aside>
         <aside class="collage">
             Collage
