More buttons, footer under booking section added, images, info-boxes and footer, class names is changed to more readable, code cleaned

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="header__logo__text">
-                <img src="../img/logo.png" class="header__logo" alt="header-logo">
+            <div class="logo-container">
+                <img src="../img/logo.png" class="logo" alt="Logotype">
                 <h1>
                     <span>Hacker</span>
                     <span>Escape</span>
@@ -30,64 +30,140 @@
                 </ul>
             </nav>
         </header>
-        <div class="header__image">
-            <img src="../img/headerImg.png" class="header__img" alt="">
+
+        <div class="header-image">
+            <img src="../img/headerImg.png" alt="Header Image">
         </div>
-        <div class="buttons__container">
-            <button class="on_site_button">On-site challenges</button>
-            <button class="online_button">Online challenges</button>
+
+        <div class="button-group">
+            <button class="on-site-button">On-site challenges</button>
+            <button class="online-button">Online challenges</button>
         </div>
-        <aside class="review__container">
+
+        <aside class="review">
             <img src="../img/logo_review.png" alt="logo">
             <span>This is a quote about how amazing this place is and how
                 much fun me and my friends had when we tried it
             </span>
             <p>John Doe, visited us is September 2021</p>
         </aside>
-        <aside class="popular__container">
-            <div class="popular__container__room__one">
-                <img src="../img/headerImg.png" alt="">
-                <h1>Title of room(on-site)</h1>
-                <div class="popular__container__raiting">
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star_no.png" alt=""></span>
-                </div>
-                <div class="poplar__participants">
-                    <span>2-6 participants</span>
-                </div>
-                <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
-                    Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-                </p>
-                <button class="red__button">Book this room</button>
-            </div>
 
-            <div class="popular__container__room__one">
-                <img src="../img/headerImg.png" alt="">
-                <h1>Title of room(on-site)</h1>
-                <div class="popular__container__raiting">
+        <section class="popular-rooms">
+            <h1>Popular challenges right now</h1>
+            <article class="room">
+                <img src="../img/headerImg.png" alt="Room image">
+                <h2>Title of room(on-site)</h2>
+                <div class="rating">
                     <span><img src="../img/star.png" alt=""></span>
                     <span><img src="../img/star.png" alt=""></span>
                     <span><img src="../img/star.png" alt=""></span>
                     <span><img src="../img/star.png" alt=""></span>
                     <span><img src="../img/star_no.png" alt=""></span>
                 </div>
-                <div class="poplar__participants">
+                <div class="participants">
                     <span>2-6 participants</span>
                 </div>
                 <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
                     Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
                 </p>
-                <button class="red__button">Book this room</button>
-            </div>
+                <button class="red-button">Book this room</button>
+            </article>
+
+            <article class="room">
+                <img src="../img/headerImg.png" alt="Room image">
+                <h2>Title of room(on-site)</h2>
+                <div class="rating">
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star_no.png" alt=""></span>
+                </div>
+                <div class="participants">
+                    <span>2-6 participants</span>
+                </div>
+                <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
+                    Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+                </p>
+                <button class="red-button">Book this room</button>
+            </article>
+
+            <article class="room">
+                <img src="../img/headerImg.png" alt="Room image">
+                <h2>Title of room(on-site)</h2>
+                <div class="rating">
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star.png" alt=""></span>
+                    <span><img src="../img/star_no.png" alt=""></span>
+                </div>
+                <div class="participants">
+                    <span>2-6 participants</span>
+                </div>
+                <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
+                    Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+                </p>
+                <button class="red-button">Book this room</button>
+            </article>
+
+        </section>
+
+        <div class="button-group-two">
+            <button class="on-site-button">On-site challenges</button>
+            <button class="online-button">Online challenges</button>
+        </div>
+
+        <aside class="mini-footer">
+            <p>Quodsi haberent magnalia inter potentiam et divitias, et non illam
+                quidem haec eo spectant jaec quoque vos ominio desit illud quo solo felicitatis
+                libertatisque perficiuntur.
+            <p>
+                <button class="footer-button">Read the full story</button>
         </aside>
-        <aside class="collage">
-            Collage
+
+        <aside class="collage-image-one">
+            <img src="../img/collage_img_one.png" alt="Collage image one">
         </aside>
+        <aside class="collage-text-one">
+            <h1>Play with your friends or build your team stronger at work</h1>
+            <p>Ptaerere, ex clupla nin inventies inum ayt acuiimf unum. Et nihil
+                inuailk. Nemo nocere tibi erit, et non inimioti , et
+            </p>
+            <button class="red-button">Book on-site today</button>
+        </aside>
+
+        <aside class="collage-image-two">
+            <img src="../img/collage_img_two.png" alt="">
+        </aside>
+        <aside class="collage-text-two">
+            <h1>Play online or visit our venue for one of our 25
+                escape rooms
+            </h1>
+            <p> Pretereassk, ex culpa non invense unum aut no acuuaictos unum.
+                Aut non accumisudf unum. Et nihil inuatiols. Nemo nocere tibi erit.
+                Et non tibi erti, non inimios, et
+            </p>
+            <button class="red-button">See all challenges</button>
+        </aside>
+
         <footer class="footer">
-            Footer
+            <h1>[Esc] Hacker Escape Rooms</h1>
+            <p>Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Magni, architecto, est dolor,
+                beatae officiis dicta tempore eveniet ducimus ab corporis
+                earum doloremque repellendus error sed consequatur iusto.
+                Excepturi, eius natus.</p>
+            <h1>Site map</h1>
+            <p>The story</p>
+            <p>Contact us</p>
+            <p>Legal</p>
+            <h2>Play online</h2>
+            <h2>Play on-site</h2>
+            <h1>Follow us on</h1>
+            <p>Facebook</p>
+            <p>Instagram</p>
+            <p>Twitter</p>
         </footer>
     </div>
 </body>
