Fonts is applied for some text and buttons, grid needs to be fixed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -42,14 +47,15 @@
 
         <aside class="review">
             <img src="../img/logo_review.png" alt="logo">
-            <span>This is a quote about how amazing this place is and how
-                much fun me and my friends had when we tried it
-            </span>
-            <p>John Doe, visited us is September 2021</p>
+            <div class="review-text">
+                <span>This is a quote about how amazing this place is and how
+                    much fun me and my friends had when we tried it
+                </span>
+                <p>John Doe, visited us is September 2021</p>
+            </div>
         </aside>
-
+        <h1>Popular challenges right now</h1>
         <section class="popular-rooms">
-            <h1>Popular challenges right now</h1>
             <article class="room">
                 <img src="../img/headerImg.png" alt="Room image">
                 <h2>Title of room(on-site)</h2>
