Image fix, dots is removed.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <header class="header">
             <div class="logo-container">
-                <img src="../img/logo.png" class="logo" alt="Logotype">
+                <img src="/img/logo.png" class="logo" alt="Logotype">
                 <h1>
                     <span>Hacker</span>
                     <span>Escape</span>
@@ -37,7 +37,7 @@
         </header>
 
         <div class="header-image">
-            <img src="../img/headerImg.png" alt="Header Image">
+            <img src="/img/headerImg.png" alt="Header Image">
         </div>
 
         <div class="button-group">
@@ -46,7 +46,7 @@
         </div>
 
         <aside class="review">
-            <img src="../img/logo_review.png" alt="logo">
+            <img src="/img/logo_review.png" alt="logo">
             <div class="review-text">
                 <span>This is a quote about how amazing this place is and how
                     much fun me and my friends had when we tried it
@@ -57,14 +57,14 @@
         <h1>Popular challenges right now</h1>
         <section class="popular-rooms">
             <article class="room">
-                <img src="../img/headerImg.png" alt="Room image">
+                <img src="/img/headerImg.png" alt="Room image">
                 <h2>Title of room(on-site)</h2>
                 <div class="rating">
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star_no.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star_no.png" alt=""></span>
                 </div>
                 <div class="participants">
                     <span>2-6 participants</span>
@@ -76,14 +76,14 @@
             </article>
 
             <article class="room">
-                <img src="../img/headerImg.png" alt="Room image">
+                <img src="/img/headerImg.png" alt="Room image">
                 <h2>Title of room(on-site)</h2>
                 <div class="rating">
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star_no.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star_no.png" alt=""></span>
                 </div>
                 <div class="participants">
                     <span>2-6 participants</span>
@@ -95,14 +95,14 @@
             </article>
 
             <article class="room">
-                <img src="../img/headerImg.png" alt="Room image">
+                <img src="/img/headerImg.png" alt="Room image">
                 <h2>Title of room(on-site)</h2>
                 <div class="rating">
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star.png" alt=""></span>
-                    <span><img src="../img/star_no.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star.png" alt=""></span>
+                    <span><img src="/img/star_no.png" alt=""></span>
                 </div>
                 <div class="participants">
                     <span>2-6 participants</span>
@@ -129,7 +129,7 @@
         </aside>
 
         <aside class="collage-image-one">
-            <img src="../img/collage_img_one.png" alt="Collage image one">
+            <img src="/img/collage_img_one.png" alt="Collage image one">
         </aside>
         <aside class="collage-text-one">
             <h1>Play with your friends or build your team stronger at work</h1>
@@ -140,7 +140,7 @@
         </aside>
 
         <aside class="collage-image-two">
-            <img src="../img/collage_img_two.png" alt="">
+            <img src="/img/collage_img_two.png" alt="">
         </aside>
         <aside class="collage-text-two">
             <h1>Play online or visit our venue for one of our 25
