Margins, padding, fonts, text dcoration, header navigations styling is added.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p>John Doe, visited us is September 2021</p>
             </div>
         </aside>
-        <h1>Popular challenges right now</h1>
+        <h2 class="rooms-titel">Popular challenges right now</h2>
         <section class="popular-rooms">
             <article class="room">
                 <img src="img/headerImg.png" alt="Room image">
@@ -132,7 +132,7 @@
             <img src="img/collage_img_one.png" alt="Collage image one">
         </aside>
         <aside class="collage-text-one">
-            <h1>Play with your friends or build your team stronger at work</h1>
+            <h2>Play with your friends or build your team stronger at work</h2>
             <p>Ptaerere, ex clupla nin inventies inum ayt acuiimf unum. Et nihil
                 inuailk. Nemo nocere tibi erit, et non inimioti , et
             </p>
@@ -143,9 +143,9 @@
             <img src="img/collage_img_two.png" alt="">
         </aside>
         <aside class="collage-text-two">
-            <h1>Play online or visit our venue for one of our 25
+            <h2>Play online or visit our venue for one of our 25
                 escape rooms
-            </h1>
+            </h2>
             <p> Pretereassk, ex culpa non invense unum aut no acuuaictos unum.
                 Aut non accumisudf unum. Et nihil inuatiols. Nemo nocere tibi erit.
                 Et non tibi erti, non inimios, et
@@ -154,19 +154,19 @@
         </aside>
 
         <footer class="footer">
-            <h1>[Esc] Hacker Escape Rooms</h1>
+            <h2>[Esc] Hacker Escape Rooms</h2>
             <p>Lorem ipsum dolor sit amet consectetur
                 adipisicing elit. Magni, architecto, est dolor,
                 beatae officiis dicta tempore eveniet ducimus ab corporis
                 earum doloremque repellendus error sed consequatur iusto.
                 Excepturi, eius natus.</p>
-            <h1>Site map</h1>
+            <h2>Site map</h2>
             <p>The story</p>
             <p>Contact us</p>
             <p>Legal</p>
-            <h2>Play online</h2>
-            <h2>Play on-site</h2>
-            <h1>Follow us on</h1>
+            <p>Play online</p>
+            <p>Play on-site</p>
+            <h2>Follow us on</h2>
             <p>Facebook</p>
             <p>Instagram</p>
             <p>Twitter</p>
