review bar, rooms bar, and mini footer style is applied, html cleaned and new tags applied

--- a/index.html
+++ b/index.html
@@ -46,12 +46,20 @@
         </div>
 
         <aside class="review">
-            <img src="img/logo_review.png" alt="logo">
-            <div class="review-text">
+            <div>
+                <img src="img/logo_review.png" alt="logo">
                 <span>This is a quote about how amazing this place is and how
                     much fun me and my friends had when we tried it
+                    <p>John Doe, visited us is September 2021</p>
                 </span>
-                <p>John Doe, visited us is September 2021</p>
+            </div>
+
+            <div>
+                <img src="img/logo_review.png" alt="logo">
+                <span>This is a quote about how amazing this place is and how
+                    much fun me and my friends had when we tried it
+                    <p>John Doe, visited us is September 2021</p>
+                </span>
             </div>
         </aside>
         <h2 class="rooms-titel">Popular challenges right now</h2>
@@ -121,11 +129,11 @@
         </div>
 
         <aside class="mini-footer">
-            <p>Quodsi haberent magnalia inter potentiam et divitias, et non illam
+            <h2>Quodsi haberent magnalia inter potentiam et divitias, et non illam
                 quidem haec eo spectant jaec quoque vos ominio desit illud quo solo felicitatis
                 libertatisque perficiuntur.
-            <p>
-                <button class="footer-button">Read the full story</button>
+            </h2>
+            <button class="footer-button">Read the full story</button>
         </aside>
 
         <aside class="collage-image-one">
@@ -133,9 +141,9 @@
         </aside>
         <aside class="collage-text-one">
             <h2>Play with your friends or build your team stronger at work</h2>
-            <p>Ptaerere, ex clupla nin inventies inum ayt acuiimf unum. Et nihil
+            <h3>Ptaerere, ex clupla nin inventies inum ayt acuiimf unum. Et nihil
                 inuailk. Nemo nocere tibi erit, et non inimioti , et
-            </p>
+            </h3>
             <button class="red-button">Book on-site today</button>
         </aside>
 
@@ -146,10 +154,10 @@
             <h2>Play online or visit our venue for one of our 25
                 escape rooms
             </h2>
-            <p> Pretereassk, ex culpa non invense unum aut no acuuaictos unum.
+            <h3> Pretereassk, ex culpa non invense unum aut no acuuaictos unum.
                 Aut non accumisudf unum. Et nihil inuatiols. Nemo nocere tibi erit.
                 Et non tibi erti, non inimios, et
-            </p>
+            </h3>
             <button class="red-button">See all challenges</button>
         </aside>
 
