--- a/index.html
+++ b/index.html
@@ -2,184 +2,195 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Page Title</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+  <script src='main.js'></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <header class="header">
-            <div class="logo-container">
-                <img src="img/logo.png" class="logo" alt="Logotype">
-                <h1>
-                    <span>Hacker</span>
-                    <span>Escape</span>
-                    <span>Rooms</span>
-                </h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Play Online</a></li>
-                    <li><a href="#">Play on-site</a></li>
-                    <li><a href="#">The Story</a></li>
-                    <li><a href="#">Contact us</a></li>
-                </ul>
-            </nav>
-        </header>
+  <div class="container">
+    <header class="header">
+      <div class="logo-container">
+        <img src="img/logo.png" class="logo" alt="Logotype">
+        <h1>
+          <span>Hacker</span>
+          <span>Escape</span>
+          <span>Rooms</span>
+        </h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Play Online</a></li>
+          <li><a href="#">Play on-site</a></li>
+          <li><a href="#">The Story</a></li>
+          <li><a href="#">Contact us</a></li>
+        </ul>
+      </nav>
+    </header>
 
-        <div class="header-image">
-            <img src="img/headerImg.png" alt="Header Image">
-        </div>
-
-        <div class="button-group">
-            <button class="on-site-button">On-site challenges</button>
-            <button class="online-button">Online challenges</button>
-        </div>
-
-        <aside class="review">
-            <div>
-                <img src="img/logo_review.png" alt="logo">
-                <span>This is a quote about how amazing this place is and how
-                    much fun me and my friends had when we tried it
-                    <p>John Doe, visited us is September 2021</p>
-                </span>
-            </div>
-
-            <div>
-                <img src="img/logo_review.png" alt="logo">
-                <span>This is a quote about how amazing this place is and how
-                    much fun me and my friends had when we tried it
-                    <p>John Doe, visited us is September 2021</p>
-                </span>
-            </div>
-        </aside>
-        <h2 class="rooms-titel">Popular challenges right now</h2>
-        <section class="popular-rooms">
-            <article class="room">
-                <img src="img/headerImg.png" alt="Room image">
-                <h2>Title of room(on-site)</h2>
-                <div class="rating">
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star_no.png" alt=""></span>
-                </div>
-                <div class="participants">
-                    <span>2-6 participants</span>
-                </div>
-                <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
-                    Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-                </p>
-                <button class="red-button">Book this room</button>
-            </article>
-
-            <article class="room">
-                <img src="img/headerImg.png" alt="Room image">
-                <h2>Title of room(on-site)</h2>
-                <div class="rating">
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star_no.png" alt=""></span>
-                </div>
-                <div class="participants">
-                    <span>2-6 participants</span>
-                </div>
-                <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
-                    Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-                </p>
-                <button class="red-button">Book this room</button>
-            </article>
-
-            <article class="room">
-                <img src="img/headerImg.png" alt="Room image">
-                <h2>Title of room(on-site)</h2>
-                <div class="rating">
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star.png" alt=""></span>
-                    <span><img src="img/star_no.png" alt=""></span>
-                </div>
-                <div class="participants">
-                    <span>2-6 participants</span>
-                </div>
-                <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
-                    Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-                </p>
-                <button class="red-button">Book this room</button>
-            </article>
-
-        </section>
-
-        <div class="button-group-two">
-            <button class="on-site-button">On-site challenges</button>
-            <button class="online-button">Online challenges</button>
-        </div>
-
-        <aside class="mini-footer">
-            <h2>Quodsi haberent magnalia inter potentiam et divitias, et non illam
-                quidem haec eo spectant jaec quoque vos ominio desit illud quo solo felicitatis
-                libertatisque perficiuntur.
-            </h2>
-            <button class="footer-button">Read the full story</button>
-        </aside>
-
-        <aside class="collage-image-one">
-            <img src="img/collage_img_one.png" alt="Collage image one">
-        </aside>
-        <aside class="collage-text-one">
-            <h2>Play with your friends or build your team stronger at work</h2>
-            <h3>Ptaerere, ex clupla nin inventies inum ayt acuiimf unum. Et nihil
-                inuailk. Nemo nocere tibi erit, et non inimioti , et
-            </h3>
-            <button class="red-button">Book on-site today</button>
-        </aside>
-
-        <aside class="collage-image-two">
-            <img src="img/collage_img_two.png" alt="">
-        </aside>
-        <aside class="collage-text-two">
-            <h2>Play online or visit our venue for one of our 25
-                escape rooms
-            </h2>
-            <h3> Pretereassk, ex culpa non invense unum aut no acuuaictos unum.
-                Aut non accumisudf unum. Et nihil inuatiols. Nemo nocere tibi erit.
-                Et non tibi erti, non inimios, et
-            </h3>
-            <button class="red-button">See all challenges</button>
-        </aside>
-
-        <footer class="footer">
-            <h2>[Esc] Hacker Escape Rooms</h2>
-            <p>Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Magni, architecto, est dolor,
-                beatae officiis dicta tempore eveniet ducimus ab corporis
-                earum doloremque repellendus error sed consequatur iusto.
-                Excepturi, eius natus.</p>
-            <h2>Site map</h2>
-            <p>The story</p>
-            <p>Contact us</p>
-            <p>Legal</p>
-            <p>Play online</p>
-            <p>Play on-site</p>
-            <h2>Follow us on</h2>
-            <p>Facebook</p>
-            <p>Instagram</p>
-            <p>Twitter</p>
-        </footer>
+    <div class="header-image">
+      <img src="img/headerImg.png" alt="Header Image">
     </div>
+
+    <div class="button-group">
+      <button class="on-site-button">On-site challenges</button>
+      <button class="online-button">Online challenges</button>
+    </div>
+
+    <aside class="review">
+      <div>
+        <img src="img/logo_review.png" alt="logo">
+        <span>This is a quote about how amazing this place is and how
+          much fun me and my friends had when we tried it
+          <p>John Doe, visited us is September 2021</p>
+        </span>
+      </div>
+
+      <div>
+        <img src="img/logo_review.png" alt="logo">
+        <span>This is a quote about how amazing this place is and how
+          much fun me and my friends had when we tried it
+          <p>John Doe, visited us is September 2021</p>
+        </span>
+      </div>
+    </aside>
+    <h2 class="rooms-titel">Popular challenges right now</h2>
+    <section class="popular-rooms">
+      <article class="room">
+        <img src="img/headerImg.png" alt="Room image">
+        <h2>Title of room(on-site)</h2>
+        <div class="rating">
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star_no.png" alt=""></span>
+        </div>
+        <div class="participants">
+          <span>2-6 participants</span>
+        </div>
+        <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
+          Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+        </p>
+        <button class="red-button">Book this room</button>
+      </article>
+
+      <article class="room">
+        <img src="img/headerImg.png" alt="Room image">
+        <h2>Title of room(on-site)</h2>
+        <div class="rating">
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star_no.png" alt=""></span>
+        </div>
+        <div class="participants">
+          <span>2-6 participants</span>
+        </div>
+        <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
+          Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+        </p>
+        <button class="red-button">Book this room</button>
+      </article>
+
+      <article class="room">
+        <img src="img/headerImg.png" alt="Room image">
+        <h2>Title of room(on-site)</h2>
+        <div class="rating">
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star.png" alt=""></span>
+          <span><img src="img/star_no.png" alt=""></span>
+        </div>
+        <div class="participants">
+          <span>2-6 participants</span>
+        </div>
+        <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
+          Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+        </p>
+        <button class="red-button">Book this room</button>
+      </article>
+
+    </section>
+
+    <div class="button-group-two">
+      <button class="on-site-button">On-site challenges</button>
+      <button class="online-button">Online challenges</button>
+    </div>
+
+    <aside class="mini-footer">
+      <h2>Quodsi haberent magnalia inter potentiam et divitias, et non illam
+        quidem haec eo spectant jaec quoque vos ominio desit illud quo solo felicitatis
+        libertatisque perficiuntur.
+      </h2>
+      <button class="footer-button">Read the full story</button>
+    </aside>
+    <aside class="collage-image-one">
+      <img src="img/collage_img_one.png" alt="Collage image one">
+    </aside>
+    <aside class="collage-text-one">
+      <section>
+        <h2>Play with your friends or build your team stronger at work</h2>
+        <h3>Ptaerere, ex clupla nin inventies inum ayt acuiimf unum. Et nihil
+          inuailk. Nemo nocere tibi erit, et non inimioti , et
+        </h3>
+        <button class="red-button">Book on-site today</button>
+      </section>
+    </aside>
+
+    <aside class="collage-image-two">
+      <img src="img/collage_img_two.png" alt="">
+    </aside>
+    <aside class="collage-text-two">
+      <section>
+        <h2>Play online or visit our venue for one of our 25
+          escape rooms
+        </h2>
+        <h3> Pretereassk, ex culpa non invense unum aut no acuuaictos unum.
+          Aut non accumisudf unum. Et nihil inuatiols. Nemo nocere tibi erit.
+          Et non tibi erti, non inimios, et
+        </h3>
+        <button class="red-button">See all challenges</button>
+      </section>
+    </aside>
+
+    <footer class="footer">
+      <h2>[Esc] Hacker Escape Rooms</h2>
+      <p>Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Magni, architecto, est dolor,
+        beatae officiis dicta tempore eveniet ducimus ab corporis
+        earum doloremque repellendus error sed consequatur iusto.
+        Excepturi, eius natus.</p>
+
+      <nav>
+        <h2>Site map</h2>
+        <ul>
+          <li><a href="#">The story</a></li>
+          <li><a href="#">Contact us</a></li>
+          <li><a href="">Legal</a></li>
+          <li><a href="">Play online</a></li>
+          <li><a href="">Play on-site</a></li>
+        </ul>
+      </nav>
+
+      <nav>
+        <h2>Follow us on</h2>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Twitter</a></li>
+      </nav>
+    </footer>
+  </div>
 </body>
 
 </html>
