collage over footer margin and font size aplied

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
     <aside class="collage-image-one">
       <img src="img/collage_img_one.png" alt="Collage image one">
     </aside>
-    <aside class="collage-text-one">
-      <section>
+    <aside class="collage-text">
+      <section class="one">
         <h2>Play with your friends or build your team stronger at work</h2>
         <h3>Ptaerere, ex clupla nin inventies inum ayt acuiimf unum. Et nihil
           inuailk. Nemo nocere tibi erit, et non inimioti , et
