--- a/index.html
+++ b/index.html
@@ -165,20 +165,22 @@
     </aside>
 
     <footer class="footer">
+      <section>
       <h2>[Esc] Hacker Escape Rooms</h2>
       <p>Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Magni, architecto, est dolor,
         beatae officiis dicta tempore eveniet ducimus ab corporis
         earum doloremque repellendus error sed consequatur iusto.
         Excepturi, eius natus.</p>
+      </section>
 
-      <nav>
+      <nav class="map">
         <h2>Site map</h2>
         <ul>
           <li><a href="#">The story</a></li>
           <li><a href="#">Contact us</a></li>
           <li><a href="">Legal</a></li>
-          <li><a href="">Play online</a></li>
+          <li class="play"><a href="">Play online</a></li>
           <li><a href="">Play on-site</a></li>
         </ul>
       </nav>
