--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
 
 <body>
   <div class="container">
+
     <header class="header">
-      <div class="logo-container">
+      <section class="logo-container">
         <img src="img/logo.png" class="logo" alt="Logotype">
         <h1>
           <span>Hacker</span>
           <span>Escape</span>
           <span>Rooms</span>
         </h1>
-      </div>
+      </section>
       <nav>
         <ul>
           <li><a href="#">Play Online</a></li>
@@ -36,16 +37,16 @@
       </nav>
     </header>
 
-    <div class="header-image">
+    <figure class="header-image">
       <img src="img/headerImg.png" alt="Header Image">
-    </div>
+    </figure>
 
-    <div class="button-group">
+    <section class="button-group">
       <button class="on-site-button">On-site challenges</button>
       <button class="online-button">Online challenges</button>
-    </div>
+    </section>
 
-    <aside class="review">
+    <section class="review">
       <div>
         <img src="img/logo_review.png" alt="logo">
         <span>This is a quote about how amazing this place is and how
@@ -61,8 +62,10 @@
           <p>John Doe, visited us is September 2021</p>
         </span>
       </div>
-    </aside>
+    </section>
+
     <h2 class="rooms-titel">Popular challenges right now</h2>
+
     <section class="popular-rooms">
       <article class="room">
         <img src="img/headerImg.png" alt="Room image">
@@ -74,9 +77,9 @@
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star_no.png" alt=""></span>
         </div>
-        <div class="participants">
+        <figure class="participants">
           <span>2-6 participants</span>
-        </div>
+        </figure>
         <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
           Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
         </p>
@@ -93,9 +96,9 @@
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star_no.png" alt=""></span>
         </div>
-        <div class="participants">
+        <figure class="participants">
           <span>2-6 participants</span>
-        </div>
+        </figure>
         <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
           Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
         </p>
@@ -112,15 +115,14 @@
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star_no.png" alt=""></span>
         </div>
-        <div class="participants">
+        <figure class="participants">
           <span>2-6 participants</span>
-        </div>
+        </figure>
         <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
           Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
         </p>
         <button class="red-button">Book this room</button>
       </article>
-
     </section>
 
     <div class="button-group-two">
@@ -128,16 +130,18 @@
       <button class="online-button">Online challenges</button>
     </div>
 
-    <aside class="mini-footer">
+    <section class="mini-footer">
       <h2>Quodsi haberent magnalia inter potentiam et divitias, et non illam
         quidem haec eo spectant jaec quoque vos ominio desit illud quo solo felicitatis
         libertatisque perficiuntur.
       </h2>
       <button class="footer-button">Read the full story</button>
-    </aside>
+    </section>
+
     <aside class="collage-image-one">
       <img src="img/collage_img_one.png" alt="Collage image one">
     </aside>
+
     <aside class="collage-text">
       <section class="one">
         <h2>Play with your friends or build your team stronger at work</h2>
@@ -151,6 +155,7 @@
     <aside class="collage-image-two">
       <img src="img/collage_img_two.png" alt="">
     </aside>
+
     <aside class="collage-text-two">
       <section>
         <h2>Play online or visit our venue for one of our 25
@@ -166,12 +171,12 @@
 
     <footer class="footer">
       <section>
-      <h2>[Esc] Hacker Escape Rooms</h2>
-      <p>Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Magni, architecto, est dolor,
-        beatae officiis dicta tempore eveniet ducimus ab corporis
-        earum doloremque repellendus error sed consequatur iusto.
-        Excepturi, eius natus.</p>
+        <h2>[Esc] Hacker Escape Rooms</h2>
+        <p>Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Magni, architecto, est dolor,
+          beatae officiis dicta tempore eveniet ducimus ab corporis
+          earum doloremque repellendus error sed consequatur iusto.
+          Excepturi, eius natus.</p>
       </section>
 
       <nav class="map">
