Image alts is changet to more understanding

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header class="header">
       <section class="logo-container">
-        <img src="img/logo.png" class="logo" alt="Logotype">
+        <img src="img/logo.png" class="logo" alt="Main logotype">
         <h1>
           <span>Hacker</span>
           <span>Escape</span>
@@ -48,7 +48,7 @@
 
     <section class="review">
       <div>
-        <img src="img/logo_review.png" alt="logo">
+        <img src="img/logo_review.png" alt="Review logo">
         <span>This is a quote about how amazing this place is and how
           much fun me and my friends had when we tried it
           <p>John Doe, visited us is September 2021</p>
@@ -56,7 +56,7 @@
       </div>
 
       <div>
-        <img src="img/logo_review.png" alt="logo">
+        <img src="img/logo_review.png" alt="Review logo">
         <span>This is a quote about how amazing this place is and how
           much fun me and my friends had when we tried it
           <p>John Doe, visited us is September 2021</p>
@@ -68,7 +68,7 @@
 
     <section class="popular-rooms">
       <article class="room">
-        <img src="img/headerImg.png" alt="Room image">
+        <img src="img/headerImg.png" alt="Popular rooms image image">
         <h2>Title of room(on-site)</h2>
         <div class="rating">
           <span><img src="img/star.png" alt=""></span>
@@ -87,7 +87,7 @@
       </article>
 
       <article class="room">
-        <img src="img/headerImg.png" alt="Room image">
+        <img src="img/headerImg.png" alt="Popular rooms image image">
         <h2>Title of room(on-site)</h2>
         <div class="rating">
           <span><img src="img/star.png" alt=""></span>
@@ -106,7 +106,7 @@
       </article>
 
       <article class="room">
-        <img src="img/headerImg.png" alt="Room image">
+        <img src="img/headerImg.png" alt="Popular rooms image image">
         <h2>Title of room(on-site)</h2>
         <div class="rating">
           <span><img src="img/star.png" alt=""></span>
@@ -153,7 +153,7 @@
     </aside>
 
     <aside class="collage-image-two">
-      <img src="img/collage_img_two.png" alt="">
+      <img src="img/collage_img_two.png" alt="Collage image two">
     </aside>
 
     <aside class="collage-text-two">
