Font size on bottom collage containers is changed for mobile design

--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
     <aside class="collage-text">
       <section class="one">
         <h2>Play with your friends or build your team stronger at work</h2>
-        <h3>Ptaerere, ex clupla nin inventies inum ayt acuiimf unum. Et nihil
-          inuailk. Nemo nocere tibi erit, et non inimioti , et
+        <h3>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
         </h3>
         <button class="red-button">Book on-site today</button>
       </section>
