div tag removed from buttons

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
       </article>
     </section>
 
-    <div class="button-group-two">
+    <section class="button-group-two">
       <button class="on-site-button">On-site challenges</button>
       <button class="online-button">Online challenges</button>
-    </div>
+    </section>
 
     <section class="mini-footer">
       <h2>Quodsi haberent magnalia inter potentiam et divitias, et non illam
