div tag removed from reting stars

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
       <article class="room">
         <img src="img/headerImg.png" alt="Popular rooms image image">
         <h2>Title of room(on-site)</h2>
-        <div class="rating">
+        <figure class="rating">
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star_no.png" alt=""></span>
-        </div>
+        </figure>
         <figure class="participants">
           <span>2-6 participants</span>
         </figure>
@@ -89,13 +89,13 @@
       <article class="room">
         <img src="img/headerImg.png" alt="Popular rooms image image">
         <h2>Title of room(on-site)</h2>
-        <div class="rating">
+        <figure class="rating">
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star_no.png" alt=""></span>
-        </div>
+        </figure>
         <figure class="participants">
           <span>2-6 participants</span>
         </figure>
@@ -108,13 +108,13 @@
       <article class="room">
         <img src="img/headerImg.png" alt="Popular rooms image image">
         <h2>Title of room(on-site)</h2>
-        <div class="rating">
+        <figure class="rating">
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star.png" alt=""></span>
           <span><img src="img/star_no.png" alt=""></span>
-        </div>
+        </figure>
         <figure class="participants">
           <span>2-6 participants</span>
         </figure>
