Code is cleaned title is added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Page Title</title>
+  <title>Hacker Escape Rooms</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
   <!-- <script src='main.js'></script> -->
@@ -145,7 +145,8 @@
     <aside class="collage-text">
       <section class="one">
         <h2>Play with your friends or build your team stronger at work</h2>
-        <h3>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+        <h3>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et
+          non inimicos, et
         </h3>
         <button class="red-button">Book on-site today</button>
       </section>
