--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Hacker Escape Rooms</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='src/scss/main.scss'>
-  <script defer src='main.js' type="module"></script>
+  <script defer src='src/js/main.js' type="module"></script>
+  <script defer src='src/js/menu-button.js' type="module"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
