Menu, Rating, Challenge class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='src/scss/main.scss'>
   <script defer src='src/js/main.js' type="module"></script>
-  <script defer src='src/js/menu-button.js' type="module"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -68,7 +67,7 @@
     <h2 class="rooms-titel">Popular challenges right now</h2>
 
     <section class="popular-rooms">
-      <article class="room">
+      <!-- <article class="room">
         <img src="img/headerImg.png" alt="Popular rooms image image">
         <h2>Title of room(on-site)</h2>
         <figure class="rating">
@@ -123,7 +122,7 @@
           Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
         </p>
         <button class="red-button">Book this room</button>
-      </article>
+      </article> -->
     </section>
 
     <section class="button-group-two">
