--- a/index.html
+++ b/index.html
@@ -66,64 +66,7 @@
 
     <h2 class="rooms-titel">Popular challenges right now</h2>
 
-    <section class="popular-rooms">
-      <!-- <article class="room">
-        <img src="img/headerImg.png" alt="Popular rooms image image">
-        <h2>Title of room(on-site)</h2>
-        <figure class="rating">
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star_no.png" alt=""></span>
-        </figure>
-        <figure class="participants">
-          <span>2-6 participants</span>
-        </figure>
-        <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
-          Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-        </p>
-        <button class="red-button">Book this room</button>
-      </article>
-
-      <article class="room">
-        <img src="img/headerImg.png" alt="Popular rooms image image">
-        <h2>Title of room(on-site)</h2>
-        <figure class="rating">
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star_no.png" alt=""></span>
-        </figure>
-        <figure class="participants">
-          <span>2-6 participants</span>
-        </figure>
-        <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
-          Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-        </p>
-        <button class="red-button">Book this room</button>
-      </article>
-
-      <article class="room">
-        <img src="img/headerImg.png" alt="Popular rooms image image">
-        <h2>Title of room(on-site)</h2>
-        <figure class="rating">
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star.png" alt=""></span>
-          <span><img src="img/star_no.png" alt=""></span>
-        </figure>
-        <figure class="participants">
-          <span>2-6 participants</span>
-        </figure>
-        <p>Praeterea, ex culpa non invenies unum aut non accusatis unum.
-          Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-        </p>
-        <button class="red-button">Book this room</button>
-      </article> -->
-    </section>
+    <section class="popular-rooms"></section>
 
     <section class="button-group-two">
       <button class="on-site-button">On-site challenges</button>
