--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <h2 class="rooms-titel">Popular challenges right now</h2>
 
-    <section class="popular-rooms"></section>
+    <section class="popular-rooms ctas"></section>
 
     <section class="button-group-two">
       <button class="on-site-button">On-site challenges</button>
